# cplusplus_flappy_bird

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
code/include/: Bird.hpp  Constants.hpp  Floor.hpp  Game.hpp  HelloWorld.hpp  PipesPair.hpp  PipesPairFactory.hpp  ScoreManager.hpp  UIManager.hpp
code/include/utils/: Animation.hpp  Collisions.hpp  CountdownTimer.hpp  RandomGenerator.hpp  SDLImageInitializer.hpp  SDLInitializer.hpp  SDLMixerInitializer.hpp  SDLTTFInitializer.hpp  SoundsManager.hpp  TextureManager.hpp
code/src/: Bird.cpp  Floor.cpp  Game.cpp  HelloWorld.cpp  PipesPair.cpp  PipesPairFactory.cpp  ScoreManager.cpp  UIManager.cpp
code/src/utils/: Collisions.cpp  RandomGenerator.cpp  SoundsManager.cpp  TextureManager.cpp  Vec2.cpp
